Fix layout shifting of the hero image with HTML/CSS

--- a/src/scenes/HomePage/components/Hero.module.css
+++ b/src/scenes/HomePage/components/Hero.module.css
@@ -16,6 +16,7 @@
     display: block;
     width: 100%;
     height: auto;
+    aspect-ratio: 16 / 9;
 }
 
 .center {
